initial upload, code-only

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+
+# Project Specific
+
+data/
+output/
+nquads/
+scripts/*_db/
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
